--- a/css/main.css
+++ b/css/main.css
@@ -700,7 +700,7 @@ header {
 .hero__title {
   display: flex;
   margin-bottom: 30px;
-  width: 696px;
+  max-width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.3636;
@@ -710,7 +710,7 @@ header {
 }
 @media screen and (max-width: 1199px) {
   .hero__title {
-    width: 360px;
+    max-width: 360px;
     font-size: 26px;
     line-height: 1.62;
   }
@@ -736,6 +736,7 @@ header {
   left: 0;
   right: 0;
   bottom: 0;
+  overflow: scroll;
   background: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -756,10 +757,10 @@ header {
   max-width: 450px;
   width: 100%;
   padding: 40px;
-  top: 50%;
+  top: 100px;
   left: 50%;
   z-index: 2;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -1238,7 +1239,9 @@ header {
 }
 
 .box-portfolio-list {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1254,6 +1257,7 @@ header {
 }
 
 .box-title {
+  flex-grow: 1;
   padding: 20px 24px;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
