--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -78,7 +78,7 @@
   &__title {
     display: flex;
     margin-bottom: 30px;
-    width: 696px;
+    max-width: 696px;
   
     font-weight: 900;
     font-size: 44px;
@@ -88,7 +88,7 @@
     color: #ffffff;
 
     @media screen and (max-width: 1199px) {
-      width: 360px;
+      max-width: 360px;
       font-size: 26px;
       line-height: 1.62;
   }
