--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-  
+    overflow: scroll;
     background: rgba(0, 0, 0, 0.2);
   
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -26,10 +26,10 @@
     max-width: 450px;
     width: 100%;
     padding: 40px;
-    top: 50%;
+    top: 100px;
     left: 50%;
     z-index: 2;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
