--- a/css/main.css
+++ b/css/main.css
@@ -1180,7 +1180,7 @@ header {
   justify-content: center;
   flex-wrap: wrap;
   justify-content: flex-start;
-  gap: 8px;
+  gap: 15px 8px;
   margin-bottom: 40px;
 }
 @media screen and (min-width: 768px) {
