--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   flex-wrap: wrap;
   justify-content: flex-start;
-  gap: 8px;
+  gap: 15px 8px;
   margin-bottom: 40px;
 
   @media screen and (min-width: 768px) {
