--- a/css/main.css
+++ b/css/main.css
@@ -1208,6 +1208,11 @@ header {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.button-portfolio__activ {
+  color: #ffffff;
+  background-color: var(--primary-hover-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 .button-portfolio:hover, .button-portfolio:focus {
   color: #ffffff;
   background-color: var(--primary-hover-color);
